// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabset (Tabs) with Tab and Tab-Group Components renders tabset with both tabs and tab-group 1`] = `
<div
  class="printable-tabs"
>
  <ul
    class="nav nav-tabs d-print-none nav-tabs"
    role="tablist"
  >
    
    
  </ul>
  <div
    class="tab-content"
  >
    
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        >
          
          
        </div>
      </div>
      
       Text in the first tab 
      
      <hr />
    </div>
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        >
          
          
        </div>
      </div>
      
       Text in the second tab 
      
      <hr />
    </div>
    <div
      class="printable-tab-group"
    >
      <div
        class="printable-tab-group-header"
      >
        
        
      </div>
      
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
         Some stuff about stars ... 
        
        <hr />
      </div>
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
        
        <hr />
      </div>
      
    </div>
    <div
      class="printable-tab-group"
    >
      <div
        class="printable-tab-group-header"
      >
        
        
      </div>
      
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper ultrices lobortis. 
        
        <hr />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`Tabset (Tabs) with Tab and Tab-Group Components renders tabset with no-page-break option 1`] = `
<div
  class="printable-tabs no-page-break"
>
  <ul
    class="nav nav-tabs d-print-none nav-tabs"
    role="tablist"
  />
   
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        />
      </div>
       
      Text in the first tab
   
      <hr />
    </div>
     
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        />
      </div>
       
      Text in the second tab
   
      <hr />
    </div>
  </div>
</div>
`;

exports[`Tabset (Tabs) with Tab and Tab-Group Components renders tabset with tab-group 1`] = `
<div
  class="printable-tabs"
>
  <ul
    class="nav nav-tabs d-print-none nav-tabs"
    role="tablist"
  >
    
    
  </ul>
  <div
    class="tab-content"
  >
    
    <div
      class="printable-tab-group"
    >
      <div
        class="printable-tab-group-header"
      >
        
        
      </div>
      
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
         Some stuff about stars ... 
        
        <hr />
      </div>
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
        
        <hr />
      </div>
      
    </div>
    <div
      class="printable-tab-group"
    >
      <div
        class="printable-tab-group-header"
      >
        
        
      </div>
      
      <div
        class="tab-pane active printable-tab-pane tab-pane-hide"
        role="tabpanel"
      >
        <div
          class="nav-tabs printable-tab-header"
        >
          <div
            class="nav-link active"
          >
            
            
          </div>
        </div>
        
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper ultrices lobortis. 
        
        <hr />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`Tabset (Tabs) with Tab and Tab-Group Components renders tabset with tabs 1`] = `
<div
  class="printable-tabs"
>
  <ul
    class="nav nav-tabs d-print-none nav-tabs"
    role="tablist"
  >
    
    
  </ul>
  <div
    class="tab-content"
  >
    
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        >
          
          
        </div>
      </div>
      
       Text in the first tab 
      
      <hr />
    </div>
    <div
      class="tab-pane active printable-tab-pane tab-pane-hide"
      role="tabpanel"
    >
      <div
        class="nav-tabs printable-tab-header"
      >
        <div
          class="nav-link active"
        >
          
          
        </div>
      </div>
      
       Text in the second tab 
      
      <hr />
    </div>
    
  </div>
</div>
`;
